# -*- mode: org -*-

* 1.3.0 (unreleased)

** New features

- The prompt for file actions now supports wildcards.

* 1.2.0

** New features

- Commands that prompt for a file have been updated to accept multiple
  files.  The popup for acting on every file as be replaced with an
  entry the multiple-file prompt.

- New option magit-annex-confirm-all-files controls whether or not
  empty input in the file prompt, which means to act on all files, has
  to be confirmed by the user.

- New option magit-annex-include-directories determines whether
  directories are listed in the file prompt.

* 1.1.0

Magit-annex has been updated for the latest version of Magit and now
requires version 2.3.0 or later.

* 1.0.0

** New features

- New mode ~magit-annex-unused-mode~ provides an interface for
  browsing and managing unused files.
- New mode ~magit-annex-list-mode~ displays the output of
  ~git annex list~.

** Interface changes

- The annex pushing menu has been removed.  The 'git-annex' branch can
  be pushed using main pushing menu in Magit 2.1.0, which makes it
  easy to push branches without checking them out.

** Other

- magit-annex has been updated for Magit version 2.1.0.

* 0.10.0

** Interface changes

- Use popup menu for annex commands.  Annex push and merge commands are
  now under this menu.

** New features

- Add single-file content commands (copy, move, get, drop, unlock,
  lock).  File choices are limited based on state of local repo.
- Add content commands for all files.
- Add ability to input git annex subcommands.
- Add ability to sync with specific remote.
- Hook up popup help with git annex manual.

* 0.9.0

** New features

- Add ~git annex merge~.
- Add ~git annex sync~.
- Add command to push git-annex branch (either along with the current
  branch or separately).